# sapf-as-plain-text

./: Cargo.toml  README.md
src/: app.rs  completions_and_hints.rs  dict.rs  main.rs  ui.rs  window.rs
