[package]
name = "sapf-as-plain-text"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dirs = "6.0.0"
eframe = "0.31.0"
portable-pty = "0.9.0"
rfd = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true
panic = "abort"
